# vsgXchange

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
applications/vsgconv/: CMakeLists.txt  vsgconv.cpp
applications/vsgshaderset/: CMakeLists.txt  vsgshaderset.cpp
applications/vsgxchange/: CMakeLists.txt  vsgxchange.cpp
include/vsgXchange/: 3DTiles.h  3d-tiles.h  Export.h  ReaderWriter_all.h  ReaderWriter_cpp.h  ReaderWriter_spirv.h  ShaderCompiler.h  all.h  assimp.h  bin.h  cpp.h  curl.h  freetype.h  gdal.h  glsl.h  gltf.h  images.h  models.h  nastran.h  spirv.h
src/: CMakeLists.txt  glslangConfig.cmake  vsgXchangeConfig.cmake  vsgXchangeConfig.cmake.in
src/3DTiles/: 3DTiles.cpp  Builder.cpp  SceneGraphBuilder.cpp  b3dm.cpp  build_vars.cmake  cmpt.cpp  i3dm.cpp
src/3d-tiles/: 3d-tiles.cpp  SceneGraphBuilder.cpp
src/all/: Version.cpp  Version.h.in  all.cpp
src/assimp/: Builder.cpp  ReaderWriter_assimp.cpp  ReaderWriter_assimp.h  SceneConverter.cpp  SceneConverter.h  assimp.cpp  assimp_fallback.cpp  assimp_pbr.h  assimp_phong.h  assimp_vertex.h  build_vars.cmake
src/assimp/shaders/: assimp_pbr_frag.cpp  assimp_phong_frag.cpp  assimp_vert.cpp
src/cpp/: ReaderWriter_cpp.cpp  ReaderWriter_cpp.h  cpp.cpp
src/curl/: build_vars.cmake  curl.cpp  curl_fallback.cpp
src/dds/: ReaderWriter_dds.cpp  ReaderWriter_dds.h  dds.cpp  tinyddsloader.h
src/freetype/: FreeTypeFont.cpp  FreeTypeFont.h  build_vars.cmake  freetype.cpp  freetype_fallback.cpp
src/gdal/: GDAL.cpp  GDAL_fallback.cpp  build_vars.cmake  gdal.cpp  gdal_utils.cpp  meta_utils.cpp
src/glsl/: ReaderWriter_glsl.cpp  ReaderWriter_glsl.h  ResourceLimits.cpp  glsl.cpp
src/gltf/: Builder.cpp  SceneGraphBuilder.cpp  bin.cpp  build_vars.cmake  gltf.cpp
src/images/: images.cpp
src/ktx/: ReaderWriter_ktx.cpp  ReaderWriter_ktx.h  build_vars.cmake  ktx.cpp  ktx_fallback.cpp
src/ktx/libktx/: filestream.c  gl_format.h  ktx_zstd.h  ktx_zstd_errors.h  texture2.c  vkloader.c  zstddeclib.c
src/models/: models.cpp
src/nastran/: nastran.cpp
src/openexr/: build_vars.cmake  openexr.cpp  openexr_fallback.cpp
src/osg/: BuildOptions.cpp  BuildOptions.h  ConvertToVsg.cpp  ConvertToVsg.h  GeometryUtils.cpp  GeometryUtils.h  ImageUtils.cpp  ImageUtils.h  OSG.cpp  OSG_fallback.cpp  Optimize.cpp  Optimize.h  ReaderWriter_osg.cpp  ReaderWriter_osg.h  SceneAnalysis.cpp  SceneAnalysis.h  SceneBuilder.cpp  SceneBuilder.h  ShaderUtils.cpp  ShaderUtils.h  build_vars.cmake
src/osg/shaders/: defaultshader_frag.cpp  defaultshader_vert.cpp  fbxshader_frag.cpp  fbxshader_vert.cpp
src/spirv/: ReaderWriter_spirv.cpp  ReaderWriter_spirv.h  spirv.cpp
src/stbi/: ReaderWriter_stbi.cpp  ReaderWriter_stbi.h  stb_image.h  stbi.cpp
src/vsgXchange/: CMakeLists.txt  ReaderWriter_all.cpp  ShaderCompiler.cpp  vsgXchangeConfig.cmake
